---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n        let a = 1\n        let a = 1\n        while true {\n          let a = 1\n        }\n        \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(2)" ]
    3 [ label = "LoopCondition" ]
    4 [ label = "BasicBlock(1)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "Normal" ]
    3 -> 4 [ label = "ConditionTrue" ]
    4 -> 3 [ label = "Normal" ]
    3 -> 1 [ label = "ConditionFalse" ]
}

